@@ -94,6 +94,8 @@ unity (6.4.0-0ubuntu1) UNRELEASED; urgency=low
     - LauncherController: make the controller enable the launcher struts, 
       based on hide-mode option. (LP: #1044005)
     - Don't desat bfb/hud icon in DNDReset. (LP: #1043963)
+    - LensView: fallback to normal renderer (instead of Coverflow) 
+      if GLSL is enabled (LP: #1040628)
 
  -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>  Thu, 30 Aug 2012 15:07:23 +0200
 
